[package]
name = "gh-stats"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
itertools = "0.14.0"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["macros", "rt"] }
